Fix scrollbar issue

--- a/results-browser/src/ResultsBrowser.css
+++ b/results-browser/src/ResultsBrowser.css
@@ -6,7 +6,7 @@
     column-gap: 50px;
     align-items: start;
     overflow: hidden;
-    max-height: 90vh;
+    max-height: 95vh;
 }
 
 .results-statistics {
@@ -22,6 +22,6 @@ th {
 }
 
 .files {
-    max-height: 90vh;
+    max-height: calc(95vh - 25px);
     overflow: auto;
 }
